[gd_scene load_steps=18 format=2]

[ext_resource path="res://vr/Player.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/config/OpenXRConfig.gdns" type="Script" id=2]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_pointer.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Teleport.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/functions/Function_Direct_movement.tscn" type="PackedScene" id=5]
[ext_resource path="res://vr/robotemitter_nofade.tres" type="Material" id=6]
[ext_resource path="res://vr/playerrobot_nofade.tres" type="Material" id=7]
[ext_resource path="res://vr/Shooter.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/godot-openxr/scenes/XRPose.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/model/player.glb" type="PackedScene" id=10]
[ext_resource path="res://player/audio/jump.wav" type="AudioStream" id=11]
[ext_resource path="res://player/audio/shoot.wav" type="AudioStream" id=12]
[ext_resource path="res://player/audio/land.wav" type="AudioStream" id=13]
[ext_resource path="res://player/audio/step_random_pitch.tres" type="AudioStream" id=14]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.6

[sub_resource type="SphereMesh" id=2]
radius = 0.05
height = 0.1

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 12 )

[node name="Player" type="ARVROrigin"]
script = ExtResource( 1 )

[node name="Configuration" type="Spatial" parent="."]
script = ExtResource( 2 )
color_space = 0
refresh_rate = 0.0

[node name="ARVRCamera" type="ARVRCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
current = true
far = 300.0

[node name="Target" type="KinematicBody" parent="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.29872, 0 )
collision_layer = 6
collision_mask = 7

[node name="CollisionShape" type="CollisionShape" parent="ARVRCamera/Target"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.726135, 0 )
shape = SubResource( 1 )

[node name="LeftHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5 )

[node name="Function_pointer" parent="LeftHand" instance=ExtResource( 3 )]
enabled = false
collision_mask = 458760
collide_with_areas = true

[node name="Function_Teleport" parent="LeftHand" instance=ExtResource( 4 )]
collision_mask = 1
enabled = false
strength = 10.0
camera = NodePath("../../ARVRCamera")

[node name="RightHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5 )
controller_id = 2

[node name="Function_pointer" parent="RightHand" instance=ExtResource( 3 )]
enabled = false
collision_mask = 458760
collide_with_areas = true

[node name="Function_Direct_movement" parent="RightHand" instance=ExtResource( 5 )]
enabled = false
camera = NodePath("../../ARVRCamera")
max_speed = 5.0
canFly = false
collision_mask = 1

[node name="LeftHandAim" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.566752, 1.16829, -0.175289 )
action = "godot/aim_pose"

[node name="Target" type="Spatial" parent="LeftHandAim"]
transform = Transform( 1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )

[node name="RightHandAim" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.970892, -0.0377901, 0.236516, 0.0388936, 0.999243, 5.79559e-10, -0.236337, 0.00919896, 0.971627, 0.246754, 1.17004, -0.187296 )
action = "godot/aim_pose"
path = "/user/hand/right"

[node name="Target" type="Spatial" parent="RightHandAim"]
transform = Transform( 1, -8.9407e-08, 0, 0, 0.00165804, 0.999998, 8.9407e-08, -0.999998, 0.00165804, 0, 0, 0.35 )

[node name="MeshInstance" type="MeshInstance" parent="RightHandAim"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="PlayerAnchor" type="Spatial" parent="."]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.6, 0 )

[node name="player" parent="PlayerAnchor" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.205081, -1.6, 0.0851713 )

[node name="Skeleton" parent="PlayerAnchor/player/Robot_Skeleton" index="0"]
bones/55/bound_children = [ NodePath("GunBone") ]

[node name="00Robot_Body008" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="0"]
material/0 = ExtResource( 7 )

[node name="00Robot_Cannons002" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="1"]
material/0 = ExtResource( 7 )

[node name="Robot_Arms" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="2"]
material/0 = ExtResource( 7 )
material/1 = ExtResource( 6 )

[node name="Robot_Arms001" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="3"]
material/0 = ExtResource( 7 )

[node name="Robot_Body" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="4"]
visible = false

[node name="SkeletonIK_Right" type="SkeletonIK" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="5"]
process_priority = 1
root_bone = "upper_arm.R"
tip_bone = "forearm.R"
target_node = NodePath("../../../../../RightHandAim/Target")

[node name="SkeletonIK_Left" type="SkeletonIK" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="6"]
process_priority = 1
root_bone = "upper_arm.L"
tip_bone = "hand.L"
target_node = NodePath("../../../../../LeftHandAim/Target")

[node name="GunBone" type="BoneAttachment" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton" index="7"]
transform = Transform( 0.18705, -0.176614, 0.966355, 0.58576, -0.769701, -0.254029, 0.788764, 0.613487, -0.0405137, -0.297446, 1.08097, -0.0711129 )
bone_name = "hand.R"

[node name="ShootFrom" parent="PlayerAnchor/player/Robot_Skeleton/Skeleton/GunBone" instance=ExtResource( 8 )]
transform = Transform( 1, 5.96046e-08, 6.70552e-08, 0, 1, -2.23517e-08, -7.45058e-09, 3.72529e-08, 1, 0, 0.4, 0 )

[node name="AnimationPlayer" parent="PlayerAnchor/player" index="1"]
autoplay = "ARMCANNON-noexp"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SoundEffects" type="Node" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 14 )

[node name="Jump" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 11 )

[node name="Land" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 13 )

[node name="Shoot" type="AudioStreamPlayer" parent="SoundEffects"]
stream = SubResource( 3 )

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="button_pressed" from="LeftHand" to="." method="_on_LeftHand_button_pressed"]
[connection signal="button_release" from="LeftHand" to="." method="_on_LeftHand_button_release"]
[connection signal="button_pressed" from="RightHand" to="." method="_on_RightHand_button_pressed"]
[connection signal="button_release" from="RightHand" to="." method="_on_RightHand_button_release"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]

[editable path="PlayerAnchor/player"]
[editable path="PlayerAnchor/player/Robot_Skeleton/Skeleton/GunBone/ShootFrom"]
